--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -125,7 +125,7 @@
         <ion-grid>
           <ion-row>
             <ion-col>
-              <ion-item>
+              <ion-item routerLink="/orders/received">
                 <ion-label class="ion-text-wrap">
                   <h2>Received Orders</h2>
                   <!-- <ion-icon name="cart-outline"></ion-icon> -->
@@ -134,7 +134,7 @@
               </ion-item>
             </ion-col>
             <ion-col>
-              <ion-item>
+              <ion-item routerLink="/orders/pending">
                 <ion-label class="ion-text-wrap">
                   <h2>Pending Orders</h2>
                   <!-- <ion-icon name="cart-outline"></ion-icon> -->
@@ -145,7 +145,7 @@
           </ion-row>
           <ion-row>
             <ion-col>
-              <ion-item>
+              <ion-item routerLink="/orders/completed">
                 <ion-label class="ion-text-wrap">
                   <h2>Completed Orders</h2>
                   <!-- <ion-icon name="cart-outline"></ion-icon> -->
@@ -154,7 +154,7 @@
               </ion-item>
             </ion-col>
             <ion-col>
-              <ion-item>
+              <ion-item routerLink="/orders/cancelled">
                 <ion-label class="ion-text-wrap">
                   <h2>Cancelled Orders</h2>
                   <!-- <ion-icon name="cart-outline"></ion-icon> -->
