login component added

--- a/src/global.scss
+++ b/src/global.scss
@@ -27,7 +27,7 @@
 
 :root{
     --primaryBgColor: #752dac;
-    --primaryTextcolor: #fff
+    --primaryTextcolor: #fff;
+    --primaryDark:#6f14b4;
+    --primaryLight:#7d47a6;
 }
-
-$test:green;
