--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,8 +13,8 @@
         <ion-item>
           <ion-icon name="cart-outline" slot="start"></ion-icon>
           <ion-label>
-            <h2>ELLOCART MAIN ADMIN FRANCHISE</h2>
-          <p>viveksunraise@gmail.com</p>
+            <h2>{{userData.username}}</h2>
+          <p>{{userData.username}}</p>
           </ion-label>
         </ion-item>
       </ion-list>
@@ -44,7 +44,7 @@
               <ion-item>
                 <ion-label class="ion-text-wrap">
                   <h2>Received Orders</h2>
-                  <p>{{data.received_orders}}</p>
+                  <p>{{data.received_orders || 0}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
@@ -52,7 +52,7 @@
               <ion-item>
                 <ion-label class="ion-text-wrap">
                   <h2>Pending Orders</h2>
-                  <p>{{data.pending_orders}}</p>
+                  <p>{{data.pending_orders || 0}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
@@ -62,7 +62,7 @@
               <ion-item>
                 <ion-label class="ion-text-wrap">
                   <h2>Completed Orders</h2>
-                  <p>{{data.completed_orders}}</p>
+                  <p>{{data.completed_orders || 0}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
@@ -70,7 +70,7 @@
               <ion-item>
                 <ion-label class="ion-text-wrap">
                   <h2>Cancel <br> Orders</h2>
-                  <p>{{data.cancelled_orders}}</p>
+                  <p>{{data.cancelled_orders || 0}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
