--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,25 @@
 <ion-content>
   <div class="head">
     <!-- <ion-icon name="logo-angular" ></ion-icon> -->
-    <ion-img src="https://www.ellocart.com/assets/img/logo.png"></ion-img>
+    <ion-img src="../../assets/icon/logo.png"></ion-img>
     <h2>Login</h2>
   </div>
   <div class="centered">
     <div class="form">
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <ion-item>
-          <ion-input placeholder="Mobile Number" formControlName="mobile" type="tel" autofocus="true" minlength="10" maxlength="10"><ion-icon name="call-outline" slot="start"></ion-icon></ion-input>
+          <ion-input placeholder="Mobile Number" formControlName="username" type="tel" autofocus="true" minlength="10" maxlength="10"><ion-icon name="call-outline" slot="start"></ion-icon></ion-input>
         </ion-item>
-        <!-- <ion-item>
-          <ion-input placeholder="Password" formControlName="password" type="password"><ion-icon name="key-outline" slot="start"></ion-icon></ion-input>
-        </ion-item> -->
+        <div *ngIf="!loginForm.controls['username'].valid && loginForm.controls['username'].dirty" class="validator-error">
+          Please enter a valid Mobile Number.
+        </div>
+       
+        <ion-item>
+          <ion-input placeholder="Pin" formControlName="password" type="password" minlength="6" maxlength="6"><ion-icon name="key-outline" slot="start"></ion-icon></ion-input>
+        </ion-item>
+        <div *ngIf="!loginForm.controls['password'].valid && loginForm.controls['password'].dirty" class="validator-error">
+          Invalid Pin.
+        </div>
          <ion-button expand="block" type="submit">Login</ion-button>
       </form>
     </div>
