--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -26,7 +26,7 @@ ion-toolbar {
     }
    
 }
-.buttons{
+.buttons,.dropdown{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -37,6 +37,5 @@ ion-toolbar {
     }
     .decline{
         --background: #e62424;
-        width: 35%;
     }
 }
