--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
     <ion-title>
       Ellocart Support
     </ion-title>
+    <ion-icon slot="end" (click)="logout()" name="log-out-outline"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
