--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,9 @@
 ion-toolbar {
     --background: var(--primaryBgColor);
     --color: var(--primaryTextcolor);
+    ion-icon{
+        font-size: 25px;
+    }
 }
 ion-label{
     text-align: center;
