--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,16 +15,13 @@
         </div>
        
         <ion-item>
-          <ion-input placeholder="Pin" formControlName="password" type="password" minlength="6" maxlength="6"><ion-icon name="key-outline" slot="start"></ion-icon></ion-input>
+          <ion-input placeholder="Pin" formControlName="password" type="password" pattern="[0-9]*" inputmode="numeric" minlength="6" maxlength="6"><ion-icon name="key-outline" slot="start"></ion-icon></ion-input>
         </ion-item>
         <div *ngIf="!loginForm.controls['password'].valid && loginForm.controls['password'].dirty" class="validator-error">
           Invalid Pin.
         </div>
          <ion-button expand="block" type="submit">Login</ion-button>
       </form>
-    </div>
-    <div class="register">
-      <p>Don't have an account? <a href="#"> Register</a></p>
     </div>
   </div>
 </ion-content>
