--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@ ion-toolbar {
     --color: var(--primaryTextcolor);
     ion-icon{
         font-size: 25px;
+        margin-right: 5px;
     }
 }
 ion-label{
