--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -33,7 +33,7 @@
             <h3>{{o.o_status}}</h3>
           </div>
           <div class="line">
-            <h3>Scheduled: {{o.odate | date:'dd-mm-yyyy'}}</h3>
+            <h3>Scheduled: {{o.odate | date:'dd-MM-yyyy'}}</h3>
             <h3>Payment: {{o.trans_id?'Online':'COD'}}</h3>
           </div>
           <h3>Delivery: {{o.delivertime}}</h3>
