--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -93,14 +93,51 @@
   </ion-card>
   <h3 class="title">Products</h3>
   <ion-card>
+    <ion-button id="open-modal" (click)="editProducts()" class="editbtn">Edit</ion-button>
+    <!-- <div class="edit" *ngIf="remove">
+      <ion-select placeholder="Add New" multiple="true" >
+        <ion-select-option *ngFor="let d of newProducts" [value]="d.id">{{d.name}}</ion-select-option>
+      </ion-select>
+      <ion-button>Add</ion-button>
+    </div> -->
+    <ion-modal trigger="open-modal">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-buttons slot="start">
+              <ion-button (click)="cancel()">Cancel</ion-button>
+            </ion-buttons>
+            <ion-title>Edit Items</ion-title>
+            <ion-buttons slot="end">
+              <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <ion-searchbar placeholder="Search Products" (ionChange)="searchProduct($event)"></ion-searchbar>
+          <ion-item *ngFor="let p of products; let i=index;">
+            <ion-img src="../../assets/icon/vj-yellow-64.png" slot="start"></ion-img>
+            <ion-label>
+              <h3>{{p.name}}</h3>
+              <div class="product">
+                <p>{{p.quantity}} Items</p>
+                <p>&#8377;{{p.price}}</p>
+                <ion-icon (click)="removeProduct(i)" name="trash-outline"></ion-icon>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
     <ion-list>
-      <ion-item>
+      <ion-item *ngFor="let p of products; let i=index;">
         <ion-img src="../../assets/icon/vj-yellow-64.png" slot="start"></ion-img>
         <ion-label>
-          <h3>Product Name</h3>
+          <h3>{{p.name}}</h3>
           <div class="product">
-            <p>{{orderData.item}}</p>
-            <p>&#8377;{{orderData.subtotal}}</p>
+            <p>{{p.quantity}} Items</p>
+            <p>&#8377;{{p.price}}</p>
+            <!-- <ion-icon *ngIf="remove" (click)="removeProduct(i)" name="trash-outline"></ion-icon> -->
           </div>
         </ion-label>
       </ion-item>
