--- a/src/app/order-details/order-details.component.scss
+++ b/src/app/order-details/order-details.component.scss
@@ -2,7 +2,7 @@ ion-toolbar {
     --background: var(--primaryBgColor);
     --color: var(--primaryTextcolor);
 }
-.line{
+.line1{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -11,6 +11,11 @@ ion-toolbar {
         font-size: 16px;
         margin: 0px;
     }
+}
+.line{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .title{
     font-size: 20px;
@@ -23,27 +28,21 @@ ion-card{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-.edit{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 30px;
-    padding: 0px 10px;
-    ion-select{
-        width: 75%;
-        border: 1px solid black;
-        border-radius: 10px;
-    }
-    ion-button{
-        --background: var(--primaryBgColor);
-        margin: 0px;
-        height: auto;
+    margin-bottom: 5px;
+    ion-img{
+        width: 15px;
     }
 }
 .editbtn{
     display: block;
     margin-left: auto;
     --background: var(--primaryBgColor);
-    width: 25%;
+    width: 20%;
+    margin-right: 10px;
+    margin-top: 10px;
+    height: 20px;
+}
+.pimg{
+    width: 40px;
+    aspect-ratio: 1/1;
 }
