--- a/src/app/order-details/order-details.component.scss
+++ b/src/app/order-details/order-details.component.scss
@@ -30,7 +30,19 @@ ion-card{
     justify-content: space-between;
     margin-bottom: 5px;
     ion-img{
-        width: 15px;
+        width: 20px;
+    }
+    ion-button{
+    --background: var(--primaryBgColor);
+    --border-radius: 50%;
+    }
+    p{
+        font-size: 16px;
+    }
+    .itemsquantity{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 }
 .editbtn{
