--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -3,6 +3,10 @@ ion-toolbar {
     --background: var(--primaryBgColor);
     --color: var(--primaryTextcolor);
 }
+ion-content p
+{
+    margin-left: 15px;;
+}
 .line{
     display: flex;
     flex-direction: row;
@@ -79,9 +83,17 @@ ion-toolbar {
     cursor:pointer
 }
 #map {
-    width: 90vw;
-    height: 90vh;
-    border: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+    border: rgb(211, 211, 211);
     border-style: solid;
     border-radius: 15px;
 }
+.custom_marker {
+    background-image: url('../../assets/mapbox-icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
