--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -85,15 +85,18 @@ ion-content p
 #map {
     width: 100%;
     height: 100%;
-    border: rgb(211, 211, 211);
-    border-style: solid;
-    border-radius: 15px;
 }
-.custom_marker {
+.custom_marker.mapboxgl-marker.mapboxgl-marker-anchor-center {
     background-image: url('../../assets/mapbox-icon.png');
     background-size: cover;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
+  }
+ion-content::part(scroll) {
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
   }
