Dashboard changes Done

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,7 +78,7 @@
               <ion-item>
                 <ion-label>
                   <h2>COD Amount</h2>
-                  <p>0</p>
+                  <p>{{ data?.cod_amount }}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
@@ -96,7 +96,7 @@
               <ion-item>
                 <ion-label>
                   <h2>Online Amount</h2>
-                  <p>0</p>
+                  <p>{{ data?.online_amount }}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
