--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -3,16 +3,25 @@
     <ion-title>
       Categories
     </ion-title>
-    <ion-icon slot="end" (click)="submit()" name="save-outline"></ion-icon>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding" force-overscroll="true">
   <ion-list>
+    <ion-item>
+      <ion-select placeholder="Select Restaurants" (ionChange)="selectRest($event)">
+
+        <ion-select-option value="all">All</ion-select-option>
+        <ion-select-option *ngFor="let r of restaurants" [value]="r.id">{{r.title}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+  <ion-searchbar (ionChange)="search($event)" [(ngModel)]="searchVal"></ion-searchbar>
+  <ion-list>
     <!-- <ion-item>
       All<ion-toggle slot="end" (click)="selectAll($event)" value="%" [checked]="checkAll"></ion-toggle>
     </ion-item> -->
-    <ion-item *ngFor="let r of categories">
-      {{r.title}}<ion-toggle slot="end" [value]="r.id" (ionChange)="select($event,r.id,r.rid)" [checked]="r.status==='1'?true:false"></ion-toggle>
+    <ion-item *ngFor="let r of searchResults">
+      {{r.title}}<br>({{r.rest_name}})<ion-toggle slot="end" [value]="r.id" (ionChange)="select($event,r.id,r.rid)" [checked]="r.status==='1'?true:false"></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
