--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -27,3 +27,21 @@ ion-img{
 .transacList p{
     font-weight: bold;
 }
+.filter ion-button{
+    margin-right: 10px;
+    display: block;
+    width: 25%;
+    --background: var(--primaryBgColor);
+    height: 35px;
+    margin-left: auto;
+}
+.filter1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.filter1 ion-button {
+    width: 48%;
+    height: 35px;
+    --background: #323412
+}
