--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -119,12 +119,12 @@
       <ion-card-title>Orders List</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <div>
+      <div class="filter">
         <ion-button (click)="filter()">Filter</ion-button>
       </div>
-      <div *ngIf="filterStatus">
-       <ion-button routerLink="/restaurants">Select by Restaurants</ion-button>
-       <ion-button routerLink="/categories">Select by Category</ion-button>
+      <div *ngIf="filterStatus" class="filter1">
+              <ion-button routerLink="/restaurants">Select by Restaurants</ion-button>
+              <ion-button routerLink="/categories">Select by Category</ion-button>
       </div>
       <ion-list lines="none">
         <ion-grid>
